--- a/src/main/resources/assets/carpet_igny_addition/lang/zh_cn.json
+++ b/src/main/resources/assets/carpet_igny_addition/lang/zh_cn.json
@@ -150,5 +150,9 @@
   "carpet.rule.realPlayerBreakLimitPerTick.desc": "真实玩家每游戏刻最多可破坏的方块数量。设为 0 表示不限制，需开启playerOperationLimiter规则",
   "carpet.rule.realPlayerPlaceLimitPerTick.desc": "真实玩家每游戏刻最多可放置的方块数量。设为 0 表示不限制，需开启playerOperationLimiter规则",
   "carpet.rule.fakePlayerBreakLimitPerTick.desc": "假人每游戏刻最多可破坏的方块数量。设为 0 表示不限制，需开启playerOperationLimiter规则",
-  "carpet.rule.fakePlayerPlaceLimitPerTick.desc": "假人每游戏刻最多可放置的方块数量。设为 0 表示不限制，需开启playerOperationLimiter规则"
+  "carpet.rule.fakePlayerPlaceLimitPerTick.desc": "假人每游戏刻最多可放置的方块数量。设为 0 表示不限制，需开启playerOperationLimiter规则",
+  "carpet.rule.generateNetherPortal.name": "生成下界传送门",
+  "carpet.rule.generateNetherPortal.desc": "使用打火石和火焰弹可以直接在黑曜石上放置1x1大小的下界传送门",
+  "carpet.rule.generateNetherPortal.extra.0": "creative：创造模式下，在survival选项的基础上可以在末地维度生成下界传送门",
+  "carpet.rule.generateNetherPortal.extra.1": "survival：生存模式下，在主世界和下界维度，蹲下对准黑曜石和下界传送门方块使用打火石和火焰弹，可以在右键的方块面上放置一个垂直于右键方块的下界传送门"
 }
