--- a/src/main/resources/assets/carpet_igny_addition/lang/zh_cn.json
+++ b/src/main/resources/assets/carpet_igny_addition/lang/zh_cn.json
@@ -154,6 +154,6 @@
   "carpet.rule.generateNetherPortal.name": "生成下界传送门",
   "carpet.rule.generateNetherPortal.desc": "在主世界和下界维度，对准黑曜石方块和下界传送门方块使用打火石和火焰弹，可以在右键的方块面上放置一个垂直于右键方块的下界传送门方块",
   "carpet.rule.generateNetherPortal.extra.0": "若右键黑曜石方块的上或下方块面，那么生成的下界传送门方块面向玩家",
-  "carpet.rule.generateNetherPortal.extra.0": "若右键下界传送门方块，则只接受在它的4个边放置下界传送门方块",
+  "carpet.rule.generateNetherPortal.extra.0": "若右键下界传送门方块，则只能在它的4个边放置下界传送门方块",
   "carpet.rule.generateNetherPortal.extra.1": "若玩家为创造模式，那么末地维度可用该规则"
 }
