添加： 规则： - commandCustomPlayerPickupItem
调整：
- minecartMotionFix规则更名为teleportInheritMinecartsMotionReintroduced

--- a/src/main/resources/assets/carpet_igny_addition/lang/zh_cn.json
+++ b/src/main/resources/assets/carpet_igny_addition/lang/zh_cn.json
@@ -50,6 +50,15 @@
   "igny.command.playerOperate.hover_resume_all": "§7继续所有任务",
   "igny.command.playerOperate.hover_stop_all": "§7停止所有任务",
   "igny.command.playerOperate.hover_disabled": "§7(不可用)",
+  "igny.command.customPlayerPickupItem.header": "--- 玩家 %s 的拾取配置 ---",
+  "igny.command.customPlayerPickupItem.mode": "模式",
+  "igny.command.customPlayerPickupItem.items": "物品列表",
+  "igny.command.customPlayerPickupItem.none": "无",
+  "igny.command.customPlayerPickupItem.invalid_mode": "无效模式: %s",
+  "igny.command.customPlayerPickupItem.invalid_item": "物品校验错误或不存在: %s",
+  "igny.command.customPlayerPickupItem.mode_success": "已更新玩家 %s 的模式为: %s",
+  "igny.command.customPlayerPickupItem.items_success": "已更新玩家 %s 的物品列表为 %s",
+  "igny.command.customPlayerPickupItem.no_permission": "你没有权限操作其他玩家的配置",
   "igny.task.status.infinite": "§7无限次",
   "igny.task.status.cycle": "§7第 §f%s§7/§f%s §7轮",
   "igny.task.status.paused": "§8[已暂停]",
@@ -91,8 +100,8 @@
   "carpet.rule.projectileDuplicationReintroduced.desc": "重新引入1.21.2以下的投掷物残留刻复制行为",
   "carpet.rule.skeletonsPickupSwordsReintroduced.name": "重新引入骷髅捡剑",
   "carpet.rule.skeletonsPickupSwordsReintroduced.desc": "重新引入1.21.4以下的骷髅捡剑行为",
-  "carpet.rule.minecartMotionFix.name": "重新引入矿车跨纬度传递动量",
-  "carpet.rule.minecartMotionFix.desc": "重新引入1.21-1.21.1版本中矿车携带乘客跨纬度会在传送tick给予乘客矿车的动量到1.21.2以上版本",
+  "carpet.rule.teleportInheritMinecartsMotionReintroduced.name": "重新引入矿车传送动量继承",
+  "carpet.rule.teleportInheritMinecartsMotionReintroduced.desc": "重新引入1.21-1.21.1版本中矿车携带乘客跨纬度会在传送tick给予乘客矿车的动量到1.21.2以上版本",
   "carpet.rule.tntMinecartEmptyDamageSourceFix.name": "TNT矿车空伤害来源修复",
   "carpet.rule.tntMinecartEmptyDamageSourceFix.desc": "修复TNT矿车引爆时传入的伤害来源为null，导致TNT矿车无法继承伤害来源的属性（可视作重新引入TNT矿车掠夺）",
   "carpet.rule.fakePlayerBoatYawFix.name": "假玩家乘船不纠正偏航角修复",
@@ -182,5 +191,7 @@
   "carpet.rule.furnaceHasIncombustibleHighlight.name": "熔炉含不可燃烧物高亮",
   "carpet.rule.furnaceHasIncombustibleHighlight.desc": "当熔炉的原料槽中含有不可燃烧的物品时，自身颜色变为淡红色，可透过方块显示",
   "carpet.rule.furnaceHasIncombustibleHighlight.extra.0": "高亮未生效需重新加载熔炉所在区块",
-  "carpet.rule.furnaceHasIncombustibleHighlight.extra.1": "需要客户端同时安装有此MOD"
+  "carpet.rule.furnaceHasIncombustibleHighlight.extra.1": "需要客户端同时安装有此MOD",
+  "carpet.rule.commandCustomPlayerPickupItem.name": "自定义玩家拾取物品指令权限",
+  "carpet.rule.commandCustomPlayerPickupItem.desc": "使用/customPlayerPickupItem来自定义玩家能拾取的物品"
 }
