--- a/src/main/resources/assets/carpet_igny_addition/lang/en_us.json
+++ b/src/main/resources/assets/carpet_igny_addition/lang/en_us.json
@@ -50,6 +50,15 @@
   "igny.command.playerOperate.hover_resume_all": "§7Resume all tasks",
   "igny.command.playerOperate.hover_stop_all": "§7Stop all tasks",
   "igny.command.playerOperate.hover_disabled": "§7(Unavailable)",
+  "igny.command.customPlayerPickupItem.header": "--- Pickup Config for %s ---",
+  "igny.command.customPlayerPickupItem.mode": "Mode",
+  "igny.command.customPlayerPickupItem.items": "Item List",
+  "igny.command.customPlayerPickupItem.none": "None",
+  "igny.command.customPlayerPickupItem.invalid_mode": "Invalid mode: %s",
+  "igny.command.customPlayerPickupItem.invalid_item": "Item invalid or not found: %s",
+  "igny.command.customPlayerPickupItem.mode_success": "Updated mode for %s to: %s",
+  "igny.command.customPlayerPickupItem.items_success": "Updated item list for %s",
+  "igny.command.customPlayerPickupItem.no_permission": "You do not have permission to modify other players' config",
   "igny.task.status.infinite": "§7Infinite",
   "igny.task.status.cycle": "§7Cycle §f%s§7/§f%s",
   "igny.task.status.paused": "§8[PAUSED]",
@@ -79,7 +88,7 @@
   "carpet.rule.noZombifiedPiglinNetherPortalSpawn.desc": "When the Nether portal in the Overworld receives a random tick, zombified piglin will not naturally spawn in the Nether portal in the Overworld",
   "carpet.rule.projectileDuplicationReintroduced.desc": "Reintroducing the projectile residual tick replication behavior from Minecraft versions below 1.21.2",
   "carpet.rule.skeletonsPickupSwordsReintroduced.desc": "Reintroducing the skeleton pickup swords behavior from Minecraft versions below 1.21.4",
-  "carpet.rule.minecartMotionFix.desc": "Ports the feature from versions 1.21-1.21.1 where minecars carrying passengers transfer their momentum to passengers during the teleport tick when crossing dimensions to version 1.21.2 and above",
+  "carpet.rule.teleportInheritMinecartsMotionReintroduced.desc": "Ports the feature from versions 1.21-1.21.1 where minecars carrying passengers transfer their momentum to passengers during the teleport tick when crossing dimensions to version 1.21.2 and above",
   "carpet.rule.tntMinecartEmptyDamageSourceFix.desc": "Fixed the source of empty damage in TNT minecarts",
   "carpet.rule.fakePlayerBoatYawFix.desc": "Fake players will not correct yaw when riding boats.",
   "carpet.rule.killFakePlayerRemoveVehicle.desc": "When removing a fake player, remove the vehicle they are riding in.",
@@ -131,5 +140,6 @@
   "carpet.rule.optimizedTNTErrorScopeFix.desc": "Fixes an issue where entities like Wind Charges have their explosions incorrectly optimized when optimizedTNT Rule is enabled.",
   "carpet.rule.furnaceHasIncombustibleHighlight.desc": "When the input slot of a furnace contains non-smeltable items, the furnace itself turns light red and becomes visible through blocks (X-ray highlight).",
   "carpet.rule.furnaceHasIncombustibleHighlight.extra.0": "Highlighting is not effective. The chunk where the furnace is located needs to be reloaded.",
-  "carpet.rule.furnaceHasIncombustibleHighlight.extra.1": "Requires this mod to be installed on the client side as well."
+  "carpet.rule.furnaceHasIncombustibleHighlight.extra.1": "Requires this mod to be installed on the client side as well.",
+  "carpet.rule.commandCustomPlayerPickupItem.desc": "Use /customPlayerPickupItem to control player custom pickup items"
 }
