修复piston记录器错误失败原因的问题

--- a/src/main/resources/assets/carpet_igny_addition/lang/en_us.json
+++ b/src/main/resources/assets/carpet_igny_addition/lang/en_us.json
@@ -91,7 +91,7 @@
   "igny.logger.piston.no.blocks.moved": "No blocks moved",
   "igny.logger.piston.push.failed": "push failed",
   "igny.logger.piston.pull.failed": "pull failed",
-  "igny.logger.piston.failure.too_many_blocks": "❌ Exceeds piston push limit\nMax allowed: %s",
+  "igny.logger.piston.failure.too_many_blocks": "❌ Exceeds piston %s limit\nMax allowed: %s",
   "igny.logger.piston.failure.unpushable_block": "❌ Cannot move block",
   "igny.logger.piston.failure.unknown": "Unknown reason",
 
