--- a/src/main/resources/assets/carpet_igny_addition/lang/zh_cn.json
+++ b/src/main/resources/assets/carpet_igny_addition/lang/zh_cn.json
@@ -91,7 +91,7 @@
   "igny.logger.piston.no.blocks.moved": "未移动任何方块",
   "igny.logger.piston.push.failed": "推出失败",
   "igny.logger.piston.pull.failed": "拉回失败",
-  "igny.logger.piston.failure.too_many_blocks": "❌ 超出活塞推出上限\n最大允许：%s",
+  "igny.logger.piston.failure.too_many_blocks": "❌ 超出活塞%s上限\n最大允许：%s",
   "igny.logger.piston.failure.unpushable_block": "❌ 无法移动方块",
   "igny.logger.piston.failure.unknown": "未知原因",
 
