--- a/src/main/resources/assets/carpet_igny_addition/lang/en_us.json
+++ b/src/main/resources/assets/carpet_igny_addition/lang/en_us.json
@@ -79,6 +79,7 @@
   "igny.task.vault.waiting": "§eWaiting",
   "igny.task.vault.logging_out": "§eLogging out",
 
+
   "igny.logger.piston.hover.dimension_line": "Dimension: %s",
   "igny.logger.piston.hover.position": "Position: %s (Click to highlight this block for 10 seconds)",
   "igny.logger.piston.action.performed": "%s  performed  %s.",
@@ -94,6 +95,8 @@
   "igny.logger.piston.failure.too_many_blocks": "❌ Exceeds piston %s limit\nMax allowed: %s",
   "igny.logger.piston.failure.unpushable_block": "❌ Cannot move block",
   "igny.logger.piston.failure.unknown": "Unknown reason",
+  "igny.logger.piston.action.performed_text": "performed",
+  "igny.logger.piston.action.punctuation": ".",
 
   "carpet.rule.wardenNeverDig.desc":"Warden Never Dig",
   "carpet.rule.playerLevitationFreeShulkerBullet.desc":"Player Immune to Shulker Levitation",
